--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -8,3 +8,11 @@
  * {
      outline: 1px dotted  blue;
  }
+
+
+ video {
+     border: 10px solid red;
+     /*  Kludge */
+     width: 100%;
+     height: 100%;
+ }
