--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,66 +1,337 @@
-/* https://cdn.plyr.io/3.3.12/plyr.css */
 body {
-  font-family: 'Boogaloo', san-serif;
-  font-size: 40px;
-  background-image: url("https://raw.githubusercontent.com/sukhleenbolina/movie-trailer/master/assets/lorax_background.png");
-  position: relative;
-  background-repeat: no-repeat;
+  background: url("https://raw.githubusercontent.com/sukhleenbolina/movie-trailer/master/assets/lorax_background.png");
+  background-position: center;
   background-size: cover;
-  height: 100vh;
-  
+  background-repeat: no-repeat;
+  position: relative;
 }
-
-h1 {
-  width: 100vw;
-  height: 10vh;
+h3 {
+  font-family: 'Boogaloo', san-serif;
   color: #ff8a2b;
   text-align: center;
-  position: absolute;
-  top: -40px;
+  font-size: 6vw;
+  margin: 0%;
+}
+
+video {
+  padding: 0;
+}
+
+.plyr__video-wrapper{
+  width: 55%;
+  text-align: center;
+	margin: 0 auto;
+	display: block;
+}
+
+@media only screen and (max-width: 600px) {
+  .plyr__video-wrapper {
+  width: 90%;
+  }
 }
 
 
-.center {
-	margin: 20px auto;
-  position: absolute;
-  width: 40%;
-  left: 30%;
-  top: 150px;
+
+.plyr--video .plyr__controls {
+  background: opacity 0
 }
 
-
-
-
-.plyr__video-embed iframe {
-	top: -50%;
-	height: 200%;
-}
-
-.plyr__control{
-  color: #6ba3ff;
+.plyr__controls{
+  width: 55%;
+  text-align: center;
+	margin: 0 auto;
 }
 
 .plyr--full-ui input[type="range"] {
   color: orange;
 }
 
-
-h3 {
-  font-family: 'Boogaloo', san-serif;
+.stack {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
-p {
+.information {
+  width: 55%;
+  text-align: center;
+	margin: 0 auto;
+	display: block;
+  display: inline-flex;
+  width: 30%;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
+
+#characters {
+  margin: 2rem 1rem;
+  width: 40vh;
+  height: 40vh;
+  background-color: black;
+}
+
+#summary{
+  margin: 2rem 1rem;
+  width: 40vh;
+  height: 40vh;
+}
+
+#summary h3 {
+  text-align: left;
+  font-size: 3vw;
+}
+
+#summary p {
+  text-align: left;
   font-family: 'Open Sans', san-serif;
-  font-size: 16px;
-  width: 42%;
 }
 
-@media screen and (max-width: 900px) {
-  .h3 {
-  font-size: 16px;   
-  }   
-  
-  @media screen and (max-width: 900px) {
-  p {
-  font-size: 10px;   
-  } 
+#summary p span {
+  font-family: 'Boogaloo', san-serif;
+  font-size: 1vw;
+  color: #ff8a2b;
+}
+
+.characters{
+  display: grid;
+
+ 
+  grid-template-columns: 50px 50px 50px 50px 50px 50px 50px 50px;
+  grid-column-gap: 15px;
+ 
+  grid-template-rows: 50px 50px 50px 50px 50px 50px 50px 50px;
+  grid-row-gap: 5px;
+} 
+
+#ted {
+  background: url('https://raw.githubusercontent.com/sukhleenbolina/movie-trailer/master/assets/ted.png');
+  background-size: cover;
+  grid-column: 3 / 5;
+  grid-row: 2 / 5;
+  z-index: 1;
+  background-color: #2B82C9;
+  border: 5px solid white;
+  width: 100%;
+  height: auto;
+  display: flex;
+  align-items: flex-end;
+  justify-content: center;
+  opacity: .5;
+  border-radius: 10%;
+}
+
+#ted:hover {
+  opacity: 1
+}
+
+#ted p { 
+  background-color: #e53b3b;
+  font-size: 10px;
+  width: 100%;
+  text-align: center;
+  color: #ffffff;
+  font-family: 'Boogaloo', san-serif;
+  margin: 0%;
+  opacity: .0;
+}
+
+#ted p:hover {
+  opacity: 1;
+}
+
+#lorax {
+  background: url('https://raw.githubusercontent.com/sukhleenbolina/movie-trailer/master/assets/lorax.png');
+  background-size: cover;
+  z-index: 1;
+  opacity: .5;
+  grid-column:5 / 8;
+  grid-row: 4 / 6;
+  background-color: #87AC45;
+  border: 5px solid white;
+  width: 100%;
+  height: auto;
+  display: flex;
+  align-items: flex-end;
+  justify-content: center;
+  opacity: .5;
+  border-radius: 10%;
+}
+
+#lorax:hover {
+  opacity: 1
+}
+
+#lorax p { 
+  background-color: #ff8a2b;
+  font-size: 10px;
+  width: 100%;
+  text-align: center;
+  color: #ffffff;
+  font-family: 'Boogaloo', san-serif;
+  margin: 0%;
+  opacity: .0;
+}
+
+#lorax:hover {
+  opacity: 1
+}
+
+#lorax p:hover {
+  opacity: 1;
+}
+
+#audrey {
+  background: url('https://raw.githubusercontent.com/sukhleenbolina/movie-trailer/master/assets/audrey.png');
+  background-size: cover;
+  z-index: 1;
+  grid-column: 1 / 3;
+  grid-row: 5 / 7;
+  background-color: #ED66A1;
+  border: 5px solid white;
+  width: 100%;
+  height: auto;
+  display: flex;
+  align-items: flex-end;
+  justify-content: center;
+  opacity: .5;
+  border-radius: 10%;
+}
+
+#audrey:hover {
+  opacity: 1
+}
+
+#audrey p { 
+  background-color: #FAD676;
+  font-size: 10px;
+  width: 100%;
+  text-align: center;
+  color: #ffffff;
+  font-family: 'Boogaloo', san-serif;
+  margin: 0%;
+  opacity: .0;
+}
+
+#audrey p:hover {
+  opacity: 1;
+}
+
+#gma {
+  background: url('https://raw.githubusercontent.com/sukhleenbolina/movie-trailer/master/assets/grammy_norma.png');
+  background-size: cover;
+  z-index: 1;
+   grid-column: 5 / 7;
+  grid-row: 2 / 4;
+  background-color: #FAD676;
+  border: 5px solid white;
+  width: 100%;
+  height: auto;
+  display: flex;
+  align-items: flex-end;
+  justify-content: center;
+  opacity: .5;
+  border-radius: 10%;
+}
+
+#gma:hover {
+  opacity: 1
+}
+
+#gma p { 
+  background-color: #ED66A1;
+  font-size: 10px;
+  width: 100%;
+  text-align: center;
+  color: #ffffff;
+  font-family: 'Boogaloo', san-serif;
+  margin: 0%;
+  opacity: .0;
+}
+
+#gma p:hover {
+  opacity: 1;
+}
+
+#onceler {
+  background: url('https://raw.githubusercontent.com/sukhleenbolina/movie-trailer/master/assets/once-ler.png');
+  background-size: cover;
+  z-index: 1;
+  grid-column: 3 / 5;
+  grid-row: 5 / 8;
+ background-color: #ff8a2b;
+  border: 5px solid white;
+  width: 100%;
+  height: auto;
+  display: flex;
+  align-items: flex-end;
+  justify-content: center;
+  opacity: .5;
+  border-radius: 10%;
+}
+
+#onceler:hover {
+  opacity: 1
+}
+
+#onceler p { 
+  background-color: #87AC45;
+  font-size: 10px;
+  width: 100%;
+  text-align: center;
+  color: #ffffff;
+  font-family: 'Boogaloo', san-serif;
+  margin: 0%;
+  opacity: .0;
+}
+
+#onceler p:hover {
+  opacity: 1;
+}
+
+#ohare {
+  background: url('https://vignette.wikia.nocookie.net/seuss/images/0/05/O%27Hare.png/revision/latest?cb=20190214162149');
+  background-size: cover;
+  z-index: 1;
+   grid-column: 1 / 3;
+  grid-row: 3 / 5;
+  background-color: #e53b3b;
+  border: 5px solid white;
+  width: 100%;
+  height: auto;
+  display: flex;
+  align-items: flex-end;
+  justify-content: center;
+  opacity: .5;
+  border-radius: 10%;
+}
+
+#ohare:hover {
+  opacity: 1
+}
+
+#ohare p { 
+  background-color: #2B82C9;
+  font-size: 10px;
+  width: 100%;
+  text-align: center;
+  color: #ffffff;
+  font-family: 'Boogaloo', san-serif;
+  margin: 0%;
+  opacity: .0;
+}
+
+#ohare p:hover {
+  opacity: 1;
+}
+
+
+footer {
+  display: flex;
+  justify-content: center;
+  align-items: flex-end;
+}
+
+footer p span {
+ font-weight: bold; 
+}
