Added Background w no border

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,5 @@
 body {
-  background: url("https://raw.githubusercontent.com/sukhleenbolina/movie-trailer/master/assets/lorax_background.jpg");
+  background: url("https://github.com/sukhleenbolina/movie-trailer/blob/master/assets/lorax_background.jpg?raw=true");
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
